--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "flask>=3.1.2",
     "flask-limiter>=3.13",
     "gunicorn>=23.0.0",
+    "logfire>=4.8.0",
 ]
 
 [dependency-groups]
