--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,43 @@
 black==25.1.0
 blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
 click==8.2.1
 deprecated==1.2.18
 dotenv==0.9.9
+executing==2.2.1
 flask==3.1.2
 flask-limiter==3.13
+googleapis-common-protos==1.70.0
 gunicorn==23.0.0
+idna==3.10
+importlib-metadata==8.7.0
 itsdangerous==2.2.0
 jinja2==3.1.6
 limits==5.5.0
+logfire==4.8.0
 markdown-it-py==4.0.0
 markupsafe==3.0.2
 mdurl==0.1.2
 mypy-extensions==1.1.0
+opentelemetry-api==1.37.0
+opentelemetry-exporter-otlp-proto-common==1.37.0
+opentelemetry-exporter-otlp-proto-http==1.37.0
+opentelemetry-instrumentation==0.58b0
+opentelemetry-proto==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
 ordered-set==4.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.4.0
+protobuf==6.32.1
 pygments==2.19.2
 python-dotenv==1.1.1
+requests==2.32.5
 rich==14.1.0
 typing-extensions==4.15.0
+urllib3==2.5.0
 werkzeug==3.1.3
 wrapt==1.17.3
+zipp==3.23.0
